--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Los arigatitos uwu",
   "license": "MIT",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dot": "^1.1.3",
     "dotenv": "^8.2.0",
